syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package nil.wix.proto;

enum MessageType {
    MessageType_Wix = 0;
    MessageType_I64Update = 1;
    MessageType_TextUpdate = 2;
}

message Range {
    int32 id = 1;
    int64 value = 2;
    int64 min = 3;
    int64 max = 4;
    int32 step = 5;
    string label = 6;
}

message Text {
    int32 id = 1;
    string placeholder = 2;
    string value = 3;
}

message I64Update {
    int32 id = 1;
    int64 value = 2;
}

message Block {
    message Widget {
        oneof value {
            Block block = 1;
            Range range = 2;
            Text text = 3;
        }
    }

    string label = 1;
    repeated Widget widgets = 2;
}

message Wix {
    repeated Block blocks = 1;
}